2009-06-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-invitations-manager.js:
	only refreshs the enabled calendars (first inclusion).

	* src/calendar/base/content/calendar-multiday-view.xml
	(deleteItemsFromCalendar): duplicate the mEventInfos array so as
	to be able to wander through the array "normally" without having
	to keep the index count up-to-date.

	* src/calendar/base/content/calendar-month-view.xml
	(deleteItemsFromCalendar): use the "deleteHash" only to flag the
	current item as deleted.

	* src/calendar/base/content/calendar-minimonth-busy.js
	(parseBoxBusy, updateBoxBusy): use "\u001a" as separator instead
	of ";".: 

	* src/calendar/base/content/agenda-listbox.js
	(agendaListbox.deleteItemsFromCalendar) duplicate the childNodes
	array so that we can delete the childNode directly without having
	to maintain an index count.

2009-06-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-unifinder.js,
	src/calendar/base/content/agenda-listbox.js,
	src/calendar/base/content/calendar-minimonth-busy.js,
	src/calendar/base/content/calendar-month-view.xml,
	src/calendar/base/content/calendar-multiday-view.xml: modified
	onCalendarAdded and /-Removed to add or delete items from the
	relevant calendar only. (fixes #500718)

2009-06-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: implemented webdav sync
	spec support. (implements #498690 and makes #498731 a non-issue)

2009-06-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Added fix in calDavCalendar.js for better handling of network
	errors.

2009-06-02  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added fix for bug #457206

2009-06-01  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added fix for bug #488720

2009-05-17  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added CalDAV fix for bug #455939

2009-05-05  Ludovic Marcotte  <lmarcotte@inverse.ca>
