@@ -1,3 +1,9 @@
+2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/base/src/calCalendarManager.js: we do not post
+	"onCalendarRegistered" notifications on new calendars before their
+	cache is initialized.
+
 2009-06-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/base/content/calendar-invitations-manager.js:
